@@ -21,11 +21,19 @@ defineIndex(subjects, data, var, subjectVar = "USUBJID", labelVars = NULL)
 \value{
 list with elements:
 \itemize{
-\item{'indexDef':}{string with LaTeX code for creation of index}
+\item{'indexDef':}{string with LaTeX code for creation of index, 
+to be included directly with \code{\link{cat}} in a knitr document
+(two backslashes)
+}
 \item{'indexInfo': }{character vector, named with named with subject ID,
  containing LaTeX code for index for each subject
-specified in \code{subjects} parameter.}
-\item{'indexPrint': }{string with LaTeX code for printing/inclusion of index}
+specified in \code{subjects} parameter, to be passed to the \code{\link{knit}} function as text
+(four backslashes)
+}
+\item{'indexPrint': }{string with LaTeX code for printing/inclusion of index, 
+to be included directly with \code{\link{cat}} in a knitr document
+(two backslashes)
+}
 }
 }
 \description{
